--- a/sqlc.yml
+++ b/sqlc.yml
@@ -99,5 +99,10 @@ sql:
             go_type: "encoding/json.RawMessage"
           - db_type: "jsonb"
             go_type: "encoding/json.RawMessage"
+          # ==== Enum types ====
+          - column: "users.user_role"
+            go_type: "string"
+          - column: "room_members.member_role"
+            go_type: "string"
 
         
