--- a/.env
+++ b/.env
@@ -2,6 +2,14 @@ SERVER_PORT=8081
 DB_USER=vixuancu
 DB_PASSWORD=123456
 DB_HOST=localhost
-DB_PORT=5434
+DB_PORT=5432
 DB_NAME=chat-app
 DB_SSLMODE=disable
+
+JWT_SECRET=your_secret_key_here
+
+
+REDIS_ADDR=localhost:6379
+REDIS_PASSWORD=
+REDIS_USER=
+REDIS_DB=0
